package com.example.demo.DesginPattern;

public interface Observer {
    public void notifyAllQueue();
}
